<resources>
    <string name="app_name">Filio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_sell">It\'s a simple option that doesn\'t have a whole lot of flair. That is extremely preferable</string>
    <string name="manage_files">MANAGE YOUR FILES</string>
    <string name="lets">Let\'s make the</string>
    <string name="magic">magic happen</string>
    <string name="clean">Let\'s clean and</string>
    <string name="manage_your">manage your file\'s </string>
    <string name="manager">MANAGER</string>
    <string name="file">FILE</string>
    <string name="stats">Stats</string>
    <string name="home">Home</string>
    <string name="about">about</string>
    <string name="version">version 1.0</string>
    <string name="grant">Grant</string>
    <string name="deny">Deny</string>
    <string name="permission">Permission</string>
    <string name="mainFragTag">MainFragment</string>
    <string name="aboutFragTag">AboutFragment</string>
    <string name="permissionText">Nothing yet? Don\'t fret :-) The application requires permission to access your storage in order to function</string>
    <string name="statisticsFragTag">StatisticsFragment</string>
    <string name="about_author">Got questions regarding the app?Issues or compliments reach out via ruitiarigibson@students.uonbi.ac.ke *_*</string>
    <string name="permission_rationale">The app needs permission read your storage in order for the app to function. ^_^</string>
    <string name="about_text">Filio is a file manager app inspired by google files.The app is not in anyway affiliated with google.In addition, the app does not in any way sell or give your data to third parties.It is solely for educational purposes</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="categories">CATEGORIES</string>
    <string name="my_storage">My Storage</string>
    <string name="used">Used</string>
    <string name="internal_storage">Internal storage</string>
    <string name="your_storage">Your storage</string>
    <string name="recent_files">Recent files</string>
    <string name="your_storage_stats">Your storage stats</string>
    <string name="delete">delete</string>
    <string name="view">view</string>
    <string name="bottom_options_frag_tag">BottomOptionsFragment</string>
    <string name="view_with">view with \</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Delete %1$s?</string>
    <string name="delete_dialog_positive_message">Delete</string>
    <string name="delete_dialog_negative">Cancel</string>
    <string name="preferences">preferences</string>
</resources>