<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

        <variable
            name="storageStatistics"
            type="com.gibsoncodes.filio.features.viewmodels.StorageStatisticsViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_12"
        tools:context=".activities.fragments.FirstFragment">

<androidx.appcompat.widget.AppCompatTextView
    android:layout_width="wrap_content"
    android:layout_marginTop="20dp"
    android:textSize="16sp"
    android:layout_height="wrap_content"
    android:id="@+id/storageStats"
    android:layout_centerHorizontal="true"
    android:text="Your storage stats"/>

        <View
            android:id="@+id/rod"
            android:layout_width="45dp"
            android:layout_height="2dp"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="203dp"
            android:background="@android:color/black" />

        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_alignEnd="@id/rod"
            android:layout_marginTop="200dp"
            android:background="@drawable/storage_circle" />

        <View
            android:id="@+id/rod_2"
            android:layout_width="45dp"
            android:layout_height="2dp"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="450dp"
            android:background="@android:color/black" />

        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_alignEnd="@id/rod_2"
            android:layout_marginTop="447dp"
            android:background="@drawable/storage_circle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-40dp"
            android:layout_marginTop="300dp"
            android:rotation="-90"
            android:text="@string/internal_storage"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            tools:text="Internal storage" />


        <com.google.android.material.card.MaterialCardView
            android:layout_width="280dp"
            android:layout_height="450dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="65dp"
            android:layout_marginTop="100dp"
            app:cardElevation="8dp"
            android:foregroundGravity="center"
            app:cardBackgroundColor="@color/secondaryTextColor"
            app:cardCornerRadius="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:text="@string/your_storage"
                tools:text="Your storage" />

            <com.gibsoncodes.filio.commons.CircleProgressBar
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                app:progressBarThickness="25dp"
                app:progressbarColor="@android:color/white"
                app:storageStatistics="@{storageStatistics.liveData}" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/used"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="100dp"
                android:drawablePadding="4dp"
                android:text="@string/used"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/text_circle"
                tools:text="Used" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_vertical|center_horizontal"
                android:layout_marginBottom="50dp"
                android:drawablePadding="4dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="status : ok"
                app:drawableStartCompat="@drawable/storage_status"
                tools:text="Status: ok" />

        </com.google.android.material.card.MaterialCardView>


    </RelativeLayout>
</layout>